Modified readme and js. Changed config to use hos-r1 on aws for generic setup b default

--- a/config.json
+++ b/config.json
@@ -1,8 +1,6 @@
 {
     "apiEndPoint" : {
-        "login" : "https://mouth.aouhos-closeli-cn.cloud.artofushos.com/api/v1/login",
-        "stream" : "https://mouth.aouhos-closeli-cn.cloud.artofushos.com/api/v1/stream",
-        "getImg" : "https://face.aouhos-closeli-cn.cloud.artofushos.com/api/v1/face"
+        "login" : "https://mouth.hos-r1.cloud.artofushos.com/api/v1/login",
     },
     "userInfo" : {
         "userName" : "admin2@artofus.com",
